--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,32 @@
     margin: 0;
     padding: 0;
 
+    
 }
+
+:root{
+    --bluish-purple: rgb(64,78,237);
+    --not-quite-dark: #23272a;
+    --blue-300: #88c8f7;
+    --blue-800: #063251;
+    --letter-color: #ffffff;
+    --body-bg: #fbfdfe;
+    --dt-darkest: #121a21;
+    --body-bg-dark: #192229;
+    --off-white: #f6f6f6;
+    --white: #fff;
+
+    --height: 1rem;
+    --duration: 0.25s;
+    --font-display: "Ginto Normal","Whitney","Helvetica Neue","Helvetica","Arial",sans-serif;
+    --num-grid-columns: 4;
+
+    --background-color: var(--bluish-purple);
+    --section-color: var(--not-quite-dark);
+    --section-background-white: var(--white);
+    --section-background-off: var(--off-white);
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -10,9 +35,11 @@ body{
 
 
 .sidebar{
-    width: 30%;
-    height: 100%;
-    border: 5px solid black;
+    width: 23%;
+    height:900px;
+    border: 1px solid black;
+    background: var(--dt-darkest);
+    color: var(--white);
 }
 
 .img__container{
@@ -20,16 +47,67 @@ body{
 }
 
 .rover__img{
-    margin: 5px 5px;
+    margin: 5px 15px;
 }
 
 .sidebar__h1{
     font-size: 30px;
-    margin: 10px;
+    transform: translate(1%, 65%);
+    margin-top: 10px;
 }
 
 .subline{
-    width: 90%;
-    border: 1px solid gray;
-    margin: 10px 5px;
+    width: 88%;
+    border: 1px solid var(--body-bg);
+    margin: 60px 5px 25px 15px;
+}
+
+.middle__container{
+    border: 1px solid white;
+    height: 80%;
+    margin: 15px;
+    padding: 15px;
+}
+
+.sidebar__icons{
+    color: var(--white);
+    font-size: 22px;
+    float: left;
+    margin-left: 20px;
+
+}
+
+.sidebar__btn{
+    text-decoration: none;
+    color: var(--letter-color);
+}
+
+.sidebar__menu-btn{
+    text-decoration: none;
+    color: var(--letter-color);
+    /* border: 1px solid white; */
+    padding: 15px 2px 15px;
+    height: 60px;
+    margin-bottom: 20px;
+}
+
+.sidebar__menu-btn:hover{
+    background: var(--blue-300);
+
+}
+
+.sidebar__btn:hover{
+    text-decoration: none;
+    color: var(--letter-color);
+}
+
+.sidebar__menu-btn:hover{
+    text-decoration: none;
+    color: var(--body-bg);
+}
+
+.sidebar__h4{
+    float: left;
+    margin-left: 20px;
+    font-size: 22px;
 }
